# Thesis

./: .env  .gitignore  GetExperiment.m  TRIANGULAR_WAVE_README.md  clean_data.py  data_analysis.m  data_analysis.py  data_processing - Copy.m  data_processing.asv  data_processing.m  download.m  main.py  main_vt.py  matlab.mat  prc.py  pressure_sensor_plot.m  pyproject.toml  requirements.txt  test_leakage.py  test_robot_positioning.py  triangular_wave_demo.py  vtech.py  vtech_config.py  wave_functions.py  wave_generation.py  wave_generation_demo.py
Evl_Arduino_adc/: Evl_Arduino_adc.ino
arduino/Eval_Arduino_adc/: Eval_Arduino_adc.ino
backup/: data_analysis.py
colcon_ws/: June4th_Test_2.txt  PR_Computing_task.py  PR_main_vt.py  UIUC.py  UIUC_trial_8.txt  arduino.py  function_holder.py  ht_cof.txt  inputs.csv  main_vt.py  mocaptest.py  random.txt  record_data.py  sine_test.txt  testcom1.py  vt_class.py  vt_class_old.py  vt_class_test.py  vtech.py  vtech1.py  vtech_sine.py  vtech_test.py
colcon_ws/Old Data/: Dec11_ramp_L5_U10_R15_test1.txt  Dec17_ramp_L0_U10_R15_test3.txt  Dec17_ramp_L0_U10_R15_zero.txt  Leakage_test.txt  Nov5_test1.txt  PR_Computing_task.txt  PR_Computing_task2.txt  SISO__ramp_trial1.txt  SISO__ramp_trial10.txt  SISO__ramp_trial2.txt  SISO__ramp_trial3.txt  SISO__step_5psi.txt  data_collect_4.txt  data_collect_mon_4.txt  data_collect_mon_7.txt  data_collect_mon_8.txt  data_collect_mon_9.txt  (+23 more)
experiments/: 2025_November.h5  default_experiment.csv  h5_manipulation.py
simulation/: simulate.m
test_connections/: main_vt.py  mocaptest.py  testcom1.py
(+189 files in other folders)
